--- a/index.html
+++ b/index.html
@@ -1,12 +1,41 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Erin Ricaloglu</title>
+  <title>Erin Ricaloglu – Research Blog</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 40px auto;
+      max-width: 800px;
+      line-height: 1.6;
+    }
+    h1, h2 {
+      color: #2c3e50;
+    }
+    nav a {
+      margin: 0 10px;
+      text-decoration: none;
+      color: #2980b9;
+    }
+  </style>
 </head>
 <body>
-  <h1>Welcome to my personal site!</h1>
-  <p>Hi, I’m Erin — a researcher interested in epigenetics, chromatin, and memory.</p>
-  <p>This site is hosted on GitHub Pages ✨</p>
+  <h1>Erin Ricaloglu</h1>
+  <nav>
+    <a href="index.html">Home</a> |
+    <a href="about.html">About</a> |
+    <a href="contact.html">Contact</a>
+  </nav>
+  <hr>
+  <h2>Welcome</h2>
+  <p>Hi, I’m Erin — a researcher interested in epigenetics, chromatin, and memory. 
+     This is my personal site where I share research notes and blog posts.</p>
+
+  <h2>Latest Notes</h2>
+  <ul>
+    <li><strong>Week 1 Research Log</strong> – First steps in RNA-seq analysis</li>
+    <li><strong>Exploring Histone Variants</strong> – Notes on MacroH2A1.2</li>
+  </ul>
 </body>
 </html>
