--- a/index.html
+++ b/index.html
@@ -2,40 +2,75 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Erin Ricaloglu – Research Blog</title>
+  <title>Erin Ricaloglu</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      margin: 40px auto;
-      max-width: 800px;
-      line-height: 1.6;
+      margin: 0;
+      padding: 0;
+      background: #f9f9f9;
     }
-    h1, h2 {
-      color: #2c3e50;
+    header {
+      background: #2c3e50;
+      padding: 10px 20px;
+    }
+    header h1 {
+      color: white;
+      display: inline;
+      margin-right: 30px;
     }
     nav a {
-      margin: 0 10px;
+      color: white;
+      margin: 0 15px;
       text-decoration: none;
-      color: #2980b9;
+      font-weight: bold;
+    }
+    nav a:hover {
+      text-decoration: underline;
+    }
+    main {
+      max-width: 900px;
+      margin: 40px auto;
+      padding: 0 20px;
+      line-height: 1.6;
+      background: white;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      border-radius: 6px;
+      padding: 30px;
+    }
+    h2 {
+      color: #2c3e50;
+      margin-top: 1.5em;
     }
   </style>
 </head>
 <body>
-  <h1>Erin Ricaloglu</h1>
-  <nav>
-    <a href="index.html">Home</a> |
-    <a href="about.html">About</a> |
-    <a href="contact.html">Contact</a>
-  </nav>
-  <hr>
-  <h2>Welcome</h2>
-  <p>Hi, I’m Erin — a researcher interested in epigenetics, chromatin, and memory. 
-     This is my personal site where I share research notes and blog posts.</p>
+  <header>
+    <h1>Erin Ricaloglu</h1>
+    <nav>
+      <a href="index.html">About</a>
+      <a href="cv.html">CV</a>
+      <a href="teaching.html">Teaching</a>
+      <a href="projects.html">Projects</a>
+    </nav>
+  </header>
 
-  <h2>Latest Notes</h2>
-  <ul>
-    <li><strong>Week 1 Research Log</strong> – First steps in RNA-seq analysis</li>
-    <li><strong>Exploring Histone Variants</strong> – Notes on MacroH2A1.2</li>
-  </ul>
+  <main>
+    <h2>Welcome!</h2>
+    <p>I am a PhD student in Psychology at the University of Toronto, 
+    researching epigenetics, chromatin regulation, and memory. 
+    This website collects my academic notes, outreach work, and projects.</p>
+    
+    <h2>Research Interests</h2>
+    <ul>
+      <li>Epigenetic regulation of memory</li>
+      <li>Histone variants and chromatin remodeling</li>
+      <li>Neurobiology of stress and cognition</li>
+    </ul>
+    
+    <h2>Contact</h2>
+    <p>Email: <a href="mailto:erin@example.com">erin@example.com</a></p>
+    <p>GitHub: <a href="https://github.com/erinricaloglu">github.com/erinricaloglu</a></p>
+  </main>
 </body>
 </html>
