--- a/projects.html
+++ b/projects.html
@@ -1,8 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Current and Past Project – Erin Ricaloglu</title>
+  <meta charset="UTF-8" />
+  <title>Projects — Erin Ricaloglu</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <style>
+    :root{--bg:#0f172a;--fg:#e5e7eb;--muted:#94a3b8;--link:#60a5fa;--card:#111827;--line:#1f2937;}
+    *{box-sizing:border-box}
+    body{margin:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial;background:linear-gradient(180deg,#0b1220,#0f172a);color:var(--fg)}
+    header{position:sticky;top:0;background:#0b1220cc;backdrop-filter:blur(8px);border-bottom:1px solid var(--line)}
+    .nav{max-width:1100px;margin:auto;display:flex;align-items:center;gap:24px;padding:12px 20px}
+    .nav a{color:var(--fg);text-decoration:none;opacity:.9} .nav a:hover{color:var(--link)}
+    .nav .spacer{margin-left:auto;color:var(--muted);font-size:.95rem}
+    main{max-width:1100px;margin:40px auto;padding:0 20px}
+    .grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:18px}
+    .card{background:var(--card);border:1px solid var(--line);border-radius:14px;padding:18px}
+    h1,h2{margin:0 0 10px} p{line-height:1.7} a{color:var(--link)}
+  </style>
 </head>
 <body>
+  <header>
+    <nav class="nav">
+      <strong>Erin Ricaloglu</strong>
+      <a href="index.html">About</a>
+      <a href="cv.html">CV</a>
+      <a href="teaching.html">Teaching</a>
+      <a href="projects.html">Projects</a>
+      <span class="spacer">Toronto, ON</span>
+    </nav>
+  </header>
+
+  <main>
+    <h1 style="margin:0 0 16px">Selected Projects</h1>
+
+    <div class="grid">
+      <div class="card">
+        <h2>Neuroimmune Modulation of SSRI Response</h2>
+        <p>Behavioural neuroscience project in a rodent model of postpartum depression; poster presented at CAMH.</p>
+        <p><a href="Erin_Ricaloglu_Poster.pdf">View poster (PDF)</a></p>
+      </div>
+
+      <div class="card">
+        <h2>Metacommunity Modelling (Honours Thesis)</h2>
+        <p>Agent-based simulations exploring biodiversity and patch size; Python-based analysis and visualizations.</p>
+      </div>
+
+      <div class="card">
+        <h2>Science Communication & Outreach</h2>
+        <p>Talks, workshops, and community events focused on neuroscience, women’s health, and research skills.</p>
+        <p><a href="teaching.html">See outreach details →</a></p>
+      </div>
+    </div>
+
+    <div class="card" style="margin-top:18px;text-align:right">
+      <a href="index.html">← Back to About</a>
+    </div>
+  </main>
+</body>
 </html>
