--- a/cv.html
+++ b/cv.html
@@ -1,94 +1,27 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>CV — Erin Ricaloglu</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <style>
-    :root{--bg:#0f172a;--fg:#e5e7eb;--muted:#94a3b8;--link:#60a5fa;--card:#111827;--line:#1f2937;}
-    *{box-sizing:border-box}
-    body{margin:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial;background:linear-gradient(180deg,#0b1220,#0f172a);color:var(--fg)}
-    header{position:sticky;top:0;background:#0b1220cc;backdrop-filter:blur(8px);border-bottom:1px solid var(--line)}
-    .nav{max-width:1100px;margin:auto;display:flex;align-items:center;gap:24px;padding:12px 20px}
-    .nav a{color:var(--fg);text-decoration:none;opacity:.9} .nav a:hover{color:var(--link)}
-    .nav .spacer{margin-left:auto;color:var(--muted);font-size:.95rem}
-    main{max-width:950px;margin:40px auto;padding:0 20px}
-    .section{background:var(--card);border:1px solid var(--line);border-radius:14px;padding:22px;margin-bottom:18px}
-    h1,h2{margin:0 0 10px} ul{margin:0;padding-left:18px;line-height:1.7}
-    a{color:var(--link)}
-    .row{display:flex;gap:12px;flex-wrap:wrap;align-items:center}
-    .pill{padding:6px 10px;background:#1f2937;border-radius:999px}
-  </style>
-</head>
-<body>
-  <header>
-    <nav class="nav">
-      <strong>Erin Ricaloglu</strong>
-      <a href="index.html">About</a>
-      <a href="cv.html">CV</a>
-      <a href="teaching.html">Teaching</a>
-      <a href="projects.html">Projects</a>
-      <span class="spacer">Toronto, ON</span>
-    </nav>
-  </header>
+<div class="section">
+  <h2>Education</h2>
+  <ul>
+    <li><strong>PhD, Behavioural Neuroscience</strong> — University of Toronto (2025–2030, in progress). Supervisor: Dr. Iva Zovkic. Focus on epigenetic regulation of memory, chromatin remodeling, and lysosomal biology.</li>
+    <li><strong>BSc (Honours) Biology, Minor in Sociology</strong> — McMaster University (2021–2025). Honours thesis: computational models of biodiversity in fragmented landscapes. Dean’s Honour List.</li>
+  </ul>
+</div>
 
-  <main>
-    <div class="section">
-      <div class="row">
-        <h1 style="margin-right:8px">Curriculum Vitae</h1>
-        <a class="pill" href="cv.pdf">Download PDF</a>
-        <a class="pill" href="mailto:erin.ricaloglu@gmail.com">erin.ricaloglu@gmail.com</a>
-        <a class="pill" href="https://www.linkedin.com/in/erinricaloglu">LinkedIn</a>
-      </div>
-    </div>
+<div class="section">
+  <h2>Research Experience</h2>
+  <ul>
+    <li><strong>PhD Researcher</strong>, University of Toronto — behavioural neuroscience; combining rodent behavioural assays with genomic and molecular tools to study memory.</li>
+    <li><strong>Research Fellow</strong>, CAMH — postpartum depression models; designed and executed behavioural experiments; poster presentation at conference.</li>
+    <li><strong>Honours Thesis Researcher</strong>, McMaster — agent-based modelling in NetLogo/Python; presented at three conferences.</li>
+    <li><strong>Undergraduate Research Assistant</strong>, McMaster — Arabidopsis immunity; RNA extraction and PCR.</li>
+    <li><strong>Field Researcher</strong>, Operation Wallacea (Honduras) — amphibian biodiversity and chytrid surveillance.</li>
+  </ul>
+</div>
 
-    <div class="section">
-      <h2>Education</h2>
-      <ul>
-        <li><strong>PhD, Behavioural Neuroscience</strong> — University of Toronto (2025–2030, in progress)</li>
-        <li><strong>BSc (Honours) Biology, Minor in Sociology</strong> — McMaster University (2021–2025), Dean’s Honour List</li>
-      </ul>
-    </div>
-
-    <div class="section">
-      <h2>Research & Training</h2>
-      <ul>
-        <li><strong>Doctoral Researcher</strong>, University of Toronto — neuroepigenetics, chromatin, memory.</li>
-        <li><strong>Research Fellow</strong>, CAMH — rodent models; behavioural assays + imaging; poster presentation.</li>
-        <li><strong>Undergraduate Researcher</strong>, McMaster — agent-based modelling; Python analysis; talks & poster.</li>
-      </ul>
-    </div>
-
-    <div class="section">
-      <h2>Teaching & Leadership</h2>
-      <ul>
-        <li><strong>Teaching Assistant & Invigilator</strong>, University of Toronto — tutorials, labs, assessment support.</li>
-        <li><strong>Outreach Coordinator</strong>, Let’s Talk Science — program design, volunteer mentoring, partnerships.</li>
-      </ul>
-    </div>
-
-    <div class="section">
-      <h2>Awards & Recognition</h2>
-      <ul>
-        <li>BioTalent Canada Student Award (2025)</li>
-        <li>Dean’s Honour List — McMaster University</li>
-        <li>Undergraduate research travel & presentation support</li>
-      </ul>
-    </div>
-
-    <div class="section">
-      <h2>Skills</h2>
-      <ul>
-        <li><strong>Molecular/Cell:</strong> PCR, RNA/DNA isolation, IHC</li>
-        <li><strong>Animal:</strong> rodent handling, behavioural assays</li>
-        <li><strong>Computational:</strong> Python, R; data viz</li>
-        <li><strong>Communication:</strong> teaching, outreach, science writing</li>
-      </ul>
-    </div>
-
-    <div class="section" style="text-align:right">
-      <a href="index.html">← Back to About</a>
-    </div>
-  </main>
-</body>
-</html>
+<div class="section">
+  <h2>Skills</h2>
+  <ul>
+    <li><strong>Experimental:</strong> PCR, RNA/DNA extraction, immunohistochemistry, rodent behavioural assays</li>
+    <li><strong>Computational:</strong> Python, R, NetLogo, data visualization</li>
+    <li><strong>Professional:</strong> teaching, mentoring, science communication, outreach program leadership</li>
+  </ul>
+</div>
