--- a/teaching.html
+++ b/teaching.html
@@ -1,61 +1,25 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>Teaching — Erin Ricaloglu</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <style>
-    :root{--bg:#0f172a;--fg:#e5e7eb;--muted:#94a3b8;--link:#60a5fa;--card:#111827;--line:#1f2937;}
-    *{box-sizing:border-box}
-    body{margin:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial;background:linear-gradient(180deg,#0b1220,#0f172a);color:var(--fg)}
-    header{position:sticky;top:0;background:#0b1220cc;backdrop-filter:blur(8px);border-bottom:1px solid var(--line)}
-    .nav{max-width:1100px;margin:auto;display:flex;align-items:center;gap:24px;padding:12px 20px}
-    .nav a{color:var(--fg);text-decoration:none;opacity:.9} .nav a:hover{color:var(--link)}
-    .nav .spacer{margin-left:auto;color:var(--muted);font-size:.95rem}
-    main{max-width:950px;margin:40px auto;padding:0 20px}
-    .section{background:var(--card);border:1px solid var(--line);border-radius:14px;padding:22px;margin-bottom:18px}
-    h1,h2{margin:0 0 10px} ul{margin:0;padding-left:18px;line-height:1.7}
-  </style>
-</head>
-<body>
-  <header>
-    <nav class="nav">
-      <strong>Erin Ricaloglu</strong>
-      <a href="index.html">About</a>
-      <a href="cv.html">CV</a>
-      <a href="teaching.html">Teaching</a>
-      <a href="projects.html">Projects</a>
-      <span class="spacer">Toronto, ON</span>
-    </nav>
-  </header>
+<div class="section">
+  <h1>Teaching & Outreach</h1>
+  <p>I believe in inclusive, hands-on teaching that helps students connect neuroscience concepts to real-world applications. I combine structured tutorials with open discussions, and I mentor students both in class and through outreach initiatives.</p>
+</div>
 
-  <main>
-    <div class="section">
-      <h1>Teaching & Outreach</h1>
-      <p>I value clear, inclusive teaching and mentorship. I like connecting molecular mechanisms to behaviour using hands-on activities and approachable data stories.</p>
-    </div>
+<div class="section">
+  <h2>Teaching Assistant & Invigilator</h2>
+  <p>University of Toronto Mississauga (2025–present). Supported undergraduate learning through tutorials, labs, and assessments. Courses include:</p>
+  <ul>
+    <li>PSY344 — Forensic Psychology</li>
+    <li>PSY393 — Human Neuropsychology</li>
+    <li>PSY280 — Sensation & Perception</li>
+    <li>PSY387 — Psychology of Music</li>
+  </ul>
+</div>
 
-    <div class="section">
-      <h2>Courses (TA / Invigilation)</h2>
-      <ul>
-        <li>Forensic Psychology (PSY344)</li>
-        <li>Human Neuropsychology (PSY393)</li>
-        <li>Sensation & Perception (PSY280)</li>
-        <li>Psychology of Music (PSY387)</li>
-      </ul>
-    </div>
-
-    <div class="section">
-      <h2>Outreach</h2>
-      <ul>
-        <li><strong>Let’s Talk Science</strong> — designing and delivering K–12 STEM programs; mentoring volunteers; school & community partnerships.</li>
-        <li><strong>Public talks & demos</strong> — neuroscience, women’s health, and research skills for students.</li>
-      </ul>
-    </div>
-
-    <div class="section" style="text-align:right">
-      <a href="index.html">← Back to About</a>
-    </div>
-  </main>
-</body>
-</html>
+<div class="section">
+  <h2>Outreach & Mentorship</h2>
+  <ul>
+    <li><strong>Outreach Coordinator</strong>, Let’s Talk Science — lead STEM programs for schools and communities; train and mentor student volunteers; coordinate large events like Science Rendezvous.</li>
+    <li><strong>Sci High Speaker</strong> — delivered neuroscience and health talks to high school classrooms in the GTA.</li>
+    <li><strong>STEM Mentor</strong>, Letters to a Pre-Scientist — long-term pen-pal mentorship with middle school students about STEM pathways.</li>
+    <li><strong>Communications Assistant</strong>, Women’s Health Research Cluster — produced accessible science communication content on equity and health.</li>
+  </ul>
+</div>
