--- a/outreach.html
+++ b/outreach.html
@@ -1,24 +1,33 @@
 <div class="section">
-  <h1>Teaching & Outreach</h1>
-</div>
-
-<div class="section">
-  <h2>Teaching Assistant & Invigilator</h2>
-  <p>University of Toronto Mississauga (2025–present). Supported undergraduate learning through tutorials, labs, and assessments. Courses include:</p>
-  <ul>
-    <li>PSY344 — Forensic Psychology</li>
-    <li>PSY393 — Human Neuropsychology</li>
-    <li>PSY280 — Sensation & Perception</li>
-    <li>PSY387 — Psychology of Music</li>
-  </ul>
+  <h1>Scientific Outreach and Communication</h1>
+  <p>Alongside research and teaching, I am committed to making science accessible, equitable, and engaging for audiences of all ages. 
+  I have developed and led outreach programs that reach K–12 classrooms, public audiences, and online communities. 
+  My work emphasizes mentorship, equity in STEM, and creating pathways for students who may not otherwise see themselves represented in science.</p>
 </div>
 
 <div class="section">
   <h2>Outreach & Mentorship</h2>
   <ul>
-    <li><strong>Outreach Coordinator</strong>, Let’s Talk Science — lead STEM programs for schools and communities; train and mentor student volunteers; coordinate large events like Science Rendezvous.</li>
-    <li><strong>Sci High Speaker</strong> — delivered neuroscience and health talks to high school classrooms in the GTA.</li>
-    <li><strong>STEM Mentor</strong>, Letters to a Pre-Scientist — long-term pen-pal mentorship with middle school students about STEM pathways.</li>
-    <li><strong>Communications Assistant</strong>, Women’s Health Research Cluster — produced accessible science communication content on equity and health.</li>
+    <li><strong>Outreach Coordinator</strong>, Let’s Talk Science (2025– )  
+      <p>Lead the University of Toronto Mississauga site, organizing STEM programs for schools and community organizations across the GTA. 
+      Recruit, train, and mentor over 100 student volunteers annually. 
+      Manage logistics and partnerships for flagship events such as <em>Science Rendezvous</em> and the <em>Let’s Talk Science Challenge</em>, collectively reaching more than 200 youth each year. 
+      Responsible for budgeting, program design, and ensuring equitable access for underserved schools.</p>
+    </li>
+
+    <li><strong>Sci High Graduate Communicator </strong>, GTA (2025)  
+      <p>Delivered interactive classroom talks on molecular biology, and genetics to high school students. Focused on making research concepts approachable, inspiring students to engage with university-level science, and encouraging equity and representation in STEM pathways.    </li>
+
+    <li><strong>STEM Mentor</strong>, Letters to a Pre-Scientist (2024– )  
+      <p>Provide long-term mentorship to middle school students in underserved communities through pen-pal exchanges. 
+      Share stories of daily life as a researcher, advice on navigating educational pathways, and encouragement to pursue curiosity-driven science. 
+      Help students connect STEM to their own interests and goals, building confidence and representation in the sciences.</p>
+    </li>
+
+    <li><strong>Communications Assistant</strong>, Women’s Health Research Cluster (2024– 
+      <p>Created accessible science communication materials to highlight equity issues in women’s health and reproductive justice. 
+      Produced infographics and social media content translating research for both academic and general audiences. 
+      Supported knowledge mobilization initiatives that promote diverse perspectives in health research and advocate for systemic change.</p>
+    </li>
   </ul>
 </div>
