--- a/cv.html
+++ b/cv.html
@@ -1,27 +1,163 @@
-<div class="section">
-  <h2>Education</h2>
-  <ul>
-    <li><strong>PhD, Behavioural Neuroscience</strong> — University of Toronto (2025–2030, in progress). Supervisor: Dr. Iva Zovkic. Focus on epigenetic regulation of memory, chromatin remodeling, and lysosomal biology.</li>
-    <li><strong>BSc (Honours) Biology, Minor in Sociology</strong> — McMaster University (2021–2025). Honours thesis: computational models of biodiversity in fragmented landscapes. Dean’s Honour List.</li>
-  </ul>
-</div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>CV — Erin Ricaloglu</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <style>
+    body {
+      margin: 0;
+      font-family: "Helvetica Neue", Arial, sans-serif;
+      background: linear-gradient(180deg, #fdfbfb, #f3e7e9);
+      color: #333;
+      line-height: 1.7;
+    }
+    header {
+      position: sticky;
+      top: 0;
+      background: #fff0f5cc;
+      backdrop-filter: blur(8px);
+      border-bottom: 1px solid #e5cfe2;
+    }
+    .nav {
+      max-width: 1000px;
+      margin: auto;
+      display: flex;
+      align-items: center;
+      gap: 24px;
+      padding: 14px 20px;
+    }
+    .nav a {
+      color: #6a4c93;
+      text-decoration: none;
+      font-weight: 500;
+      transition: color 0.2s;
+    }
+    .nav a:hover {
+      color: #d45d79;
+    }
+    main {
+      max-width: 850px;
+      margin: 40px auto;
+      padding: 0 20px;
+    }
+    .section {
+      background: #ffffffdd;
+      border: 1px solid #e8d6eb;
+      border-radius: 18px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.05);
+      padding: 24px;
+      margin-bottom: 26px;
+    }
+    h1, h2 {
+      margin-top: 0;
+      color: #6a4c93;
+    }
+    ul {
+      padding-left: 20px;
+      margin: 0;
+    }
+    li {
+      margin-bottom: 10px;
+    }
+    .note {
+      font-size: 0.9rem;
+      color: #555;
+      text-align: right;
+      font-style: italic;
+    }
+    .pill {
+      display: inline-block;
+      padding: 6px 12px;
+      background: #fce7f3;
+      border-radius: 999px;
+      font-size: 0.85rem;
+      margin: 6px 6px 0 0;
+      color: #6a4c93;
+      text-decoration: none;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <nav class="nav">
+      <strong>Erin Ricaloglu</strong>
+      <a href="index.html">About</a>
+      <a href="cv.html">CV</a>
+      <a href="teaching.html">Teaching</a>
+      <a href="outreach.html">Outreach</a>
+      <a href="volunteering.html">Volunteering</a>
+      <a href="projects.html">Projects</a>
+    </nav>
+  </header>
 
-<div class="section">
-  <h2>Research Experience</h2>
-  <ul>
-    <li><strong>PhD Researcher</strong>, University of Toronto — behavioural neuroscience; combining rodent behavioural assays with genomic and molecular tools to study memory.</li>
-    <li><strong>Research Fellow</strong>, CAMH — postpartum depression models; designed and executed behavioural experiments; poster presentation at conference.</li>
-    <li><strong>Honours Thesis Researcher</strong>, McMaster — agent-based modelling in NetLogo/Python; presented at three conferences.</li>
-    <li><strong>Undergraduate Research Assistant</strong>, McMaster — Arabidopsis immunity; RNA extraction and PCR.</li>
-    <li><strong>Field Researcher</strong>, Operation Wallacea (Honduras) — amphibian biodiversity and chytrid surveillance.</li>
-  </ul>
-</div>
+  <main>
+    <div class="section">
+      <h1>Curriculum Vitae</h1>
+      <p>Below is a summary of my academic background, research experience, and skills. 
+      A full PDF version of my CV can be provided upon request ✿</p>
+      <a class="pill" href="mailto:erin.ricaloglu@gmail.com">Request PDF CV</a>
+      <a class="pill" href="https://www.linkedin.com/in/erinricaloglu">LinkedIn</a>
+      <a class="pill" href="https://github.com/erinstar">GitHub</a>
+    </div>
 
-<div class="section">
-  <h2>Skills</h2>
-  <ul>
-    <li><strong>Experimental:</strong> PCR, RNA/DNA extraction, immunohistochemistry, rodent behavioural assays</li>
-    <li><strong>Computational:</strong> Python, R, NetLogo, data visualization</li>
-    <li><strong>Professional:</strong> teaching, mentoring, science communication, outreach program leadership</li>
-  </ul>
-</div>
+    <div class="section">
+      <h2>Education</h2>
+      <ul>
+        <li><strong>PhD, Behavioural Neuroscience</strong> — University of Toronto (2025–2030, in progress).  
+        Supervisor: Dr. Iva Zovkic. Research focuses on histone variant exchange and lysosomal regulation in Alzheimer’s disease models. Integrates molecular biology, epigenetics, and behavioural neuroscience.</li>
+        <li><strong>BSc (Honours) Biology, Minor in Sociology</strong> — McMaster University (2021–2025).  
+        Dean’s Honour List. Thesis on metacommunity dynamics in fragmented landscapes using computational modelling. Exchange term at University of Copenhagen (ancient proteomics).</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>Research Experience</h2>
+      <ul>
+        <li><strong>Doctoral Researcher</strong>, University of Toronto (2025– )  
+        Designing rodent behavioural experiments combined with molecular and genomic assays to study chromatin regulation of memory and cognition.</li>
+        <li><strong>Research Fellow</strong>, CAMH (2025)  
+        Independent project on postpartum depression. Conducted behavioural assays (FST, maternal care paradigms) and immunohistochemistry. Presented findings in a poster at CAMH conference.</li>
+        <li><strong>Honours Thesis Researcher</strong>, McMaster (2024–2025)  
+        Developed agent-based biodiversity models using NetLogo and Python. Presented at three conferences (Ontario Biology Day, McMaster Symposium, WISE Conference).</li>
+        <li><strong>Undergraduate Research Assistant</strong>, McMaster (2023–2024)  
+        Supported Arabidopsis immunity project (RNA isolation, PCR, pathogen inoculations). Contributed to studies on systemic acquired resistance.</li>
+        <li><strong>Field Researcher</strong>, Operation Wallacea, Honduras (2023)  
+        Conducted amphibian biodiversity surveys and chytrid fungal surveillance in cloud forest ecosystems. Authored report on fungal emergence threats.</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>Teaching & Leadership</h2>
+      <ul>
+        <li><strong>Teaching Assistant</strong>, University of Toronto (2025– ) — tutorials, labs, and assessment support in psychology and neuroscience courses.</li>
+        <li><strong>Outreach Coordinator</strong>, Let’s Talk Science — led STEM outreach programs across the GTA; trained and mentored student volunteers; coordinated flagship events with 200+ youth participants.</li>
+        <li><strong>Graduate Communicator</strong>, Sci High — delivered neuroscience and biomedical research talks in high school classrooms across Toronto.</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>Awards & Recognition</h2>
+      <ul>
+        <li>BioTalent Canada Student Award — 2025</li>
+        <li>Undergraduate Research Travel Award — McMaster University (2025)</li>
+        <li>Dean’s Honour List — McMaster University (multiple years)</li>
+        <li>Global Experience Award — University of Copenhagen exchange (2023)</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>Skills</h2>
+      <ul>
+        <li><strong>Experimental:</strong> PCR, RNA/DNA extraction, immunohistochemistry, rodent behavioural assays, microscopy</li>
+        <li><strong>Computational:</strong> Python, R, NetLogo, data visualization, bioinformatics basics (scRNA-seq training)</li>
+        <li><strong>Professional:</strong> teaching, mentoring, program coordination, science communication</li>
+      </ul>
+    </div>
+
+    <div class="note">
+      ✦ For a full CV with additional details (conference presentations, publications, and training), please <a href="mailto:erin.ricaloglu@gmail.com">contact me</a>.
+    </div>
+  </main>
+</body>
+</html>
